compiler/tools/fpp-check/test/invalid_symbols/module_hides_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/invalid_symbols/module_hides_constant.fpp: 7.16
  constant b = a
               ^
error: invalid symbol a: not a constant symbol
